cmake_minimum_required(VERSION 2.8)
project(test)

add_compile_options(-std=c++11 -g -O0)
include_directories(../../3rdparty/basesdk)
include_directories(../proxy)
ADD_DEFINITIONS(-DTEST_CODE)
file(GLOB SRC ../proxy/*.cpp)
file(GLOB INC ../proxy/*.h)
file(GLOB TEST_SRC *.cpp)
set(SRC ${SRC} ${TEST_SRC})
message("build proxy src:" ${SRC})
message("build proxy inc:" ${INC})

add_executable(test ${SRC} ${INC} )
target_link_libraries(test baseservice pthread)
